--- a/src/MovieCard/MovieCard.css
+++ b/src/MovieCard/MovieCard.css
@@ -25,7 +25,7 @@ a {
 
 .movie-release {
     font-family: 'Raleway', sans-serif;
-    font-size: 0.8em;
+    font-size: 1em;
     text-align: left;
     color: black;
     font-weight: lighter;
@@ -33,7 +33,7 @@ a {
 }
 
 .movie {
-    font-size: 0.9em;
+    font-size: 1.1em;
     color: black;
     letter-spacing: 1px;
 }
