--- a/src/NoRoute/NoRoute.css
+++ b/src/NoRoute/NoRoute.css
@@ -28,6 +28,6 @@ a:visited {
     color: black;
 }
 
-.fa-home {
+.home {
     margin: 0 5px;
 }
